// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkBannerAlert should render correctly with "type" attribute equal to "error" 1`] = `
<section
  className="bpk-banner-alert bpk-banner-alert--error"
>
  <header
    aria-live="assertive"
    className="bpk-banner-alert__header"
    onClick={[Function]}
    role="alert"
  >
    <span
      className="bpk-banner-alert__icon"
    >
      <span
        style={
          Object {
            "display": "inline-block",
            "lineHeight": "1.125rem",
            "marginTop": "0.1875rem",
            "verticalAlign": "top",
          }
        }
      >
        <svg
          className="bpk-banner-alert__error-icon"
          height="18"
          style={
            Object {
              "height": "1.125rem",
              "width": "1.125rem",
            }
          }
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 2C6.5 2 2 6.5 2 12s4.5 10 10 10 10-4.5 10-10S17.5 2 12 2zm1.5 16.1c0 .5-.4.9-.9.9h-1.1c-.5 0-.9-.4-.9-.9V11c0-.5.4-.9.9-.9h1.1c.5 0 .9.4.9.9v7.1zm0-11.1c0 .5-.5 1-1 1h-1c-.5 0-1-.5-1-1V6c0-.5.5-1 1-1h1c.5 0 1 .5 1 1v1z"
          />
        </svg>
      </span>
    </span>
     
    <span
      className="bpk-banner-alert__message"
    >
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
    </span>
     
  </header>
</section>
`;

exports[`BpkBannerAlert should render correctly with "type" attribute equal to "success" 1`] = `
<section
  className="bpk-banner-alert bpk-banner-alert--success"
>
  <header
    aria-live="assertive"
    className="bpk-banner-alert__header"
    onClick={[Function]}
    role="alert"
  >
    <span
      className="bpk-banner-alert__icon"
    >
      <span
        style={
          Object {
            "display": "inline-block",
            "lineHeight": "1.125rem",
            "marginTop": "0.1875rem",
            "verticalAlign": "top",
          }
        }
      >
        <svg
          className="bpk-banner-alert__success-icon"
          height="18"
          style={
            Object {
              "height": "1.125rem",
              "width": "1.125rem",
            }
          }
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 2C6.5 2 2 6.5 2 12s4.5 10 10 10 10-4.5 10-10S17.5 2 12 2zm5.9 7l-6.5 7.4c-.4.5-1.2.6-1.7.1l-3.5-3.1c-.3-.2-.3-.6-.1-.8l.8-.9c.2-.3.6-.3.8-.1l2.4 2.1c.1.1.3.1.3 0L16 7.4c.2-.2.6-.3.8-.1l.9.8c.3.3.4.6.2.9z"
          />
        </svg>
      </span>
    </span>
     
    <span
      className="bpk-banner-alert__message"
    >
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
    </span>
     
  </header>
</section>
`;

exports[`BpkBannerAlert should render correctly with "type" attribute equal to "warn" 1`] = `
<section
  className="bpk-banner-alert bpk-banner-alert--warn"
>
  <header
    aria-live="assertive"
    className="bpk-banner-alert__header"
    onClick={[Function]}
    role="alert"
  >
    <span
      className="bpk-banner-alert__icon"
    >
      <span
        style={
          Object {
            "display": "inline-block",
            "lineHeight": "1.125rem",
            "marginTop": "0.1875rem",
            "verticalAlign": "top",
          }
        }
      >
        <svg
          className="bpk-banner-alert__warn-icon"
          height="18"
          style={
            Object {
              "height": "1.125rem",
              "width": "1.125rem",
            }
          }
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 2C6.5 2 2 6.5 2 12s4.5 10 10 10 10-4.5 10-10S17.5 2 12 2zm1.5 16.1c0 .5-.4.9-.9.9h-1.1c-.5 0-.9-.4-.9-.9V11c0-.5.4-.9.9-.9h1.1c.5 0 .9.4.9.9v7.1zm0-11.1c0 .5-.5 1-1 1h-1c-.5 0-1-.5-1-1V6c0-.5.5-1 1-1h1c.5 0 1 .5 1 1v1z"
          />
        </svg>
      </span>
    </span>
     
    <span
      className="bpk-banner-alert__message"
    >
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
    </span>
     
  </header>
</section>
`;

exports[`BpkBannerAlert should render correctly with a custom class name 1`] = `
<section
  className="bpk-banner-alert bpk-banner-alert--warn custom-class"
>
  <header
    aria-live="assertive"
    className="bpk-banner-alert__header"
    onClick={[Function]}
    role="alert"
  >
    <span
      className="bpk-banner-alert__icon"
    >
      <span
        style={
          Object {
            "display": "inline-block",
            "lineHeight": "1.125rem",
            "marginTop": "0.1875rem",
            "verticalAlign": "top",
          }
        }
      >
        <svg
          className="bpk-banner-alert__warn-icon"
          height="18"
          style={
            Object {
              "height": "1.125rem",
              "width": "1.125rem",
            }
          }
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 2C6.5 2 2 6.5 2 12s4.5 10 10 10 10-4.5 10-10S17.5 2 12 2zm1.5 16.1c0 .5-.4.9-.9.9h-1.1c-.5 0-.9-.4-.9-.9V11c0-.5.4-.9.9-.9h1.1c.5 0 .9.4.9.9v7.1zm0-11.1c0 .5-.5 1-1 1h-1c-.5 0-1-.5-1-1V6c0-.5.5-1 1-1h1c.5 0 1 .5 1 1v1z"
          />
        </svg>
      </span>
    </span>
     
    <span
      className="bpk-banner-alert__message"
    >
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
    </span>
     
  </header>
</section>
`;

exports[`BpkBannerAlert should render correctly with a element based message 1`] = `
<section
  className="bpk-banner-alert bpk-banner-alert--success"
>
  <header
    aria-live="assertive"
    className="bpk-banner-alert__header bpk-banner-alert__header--expandable"
    onClick={[Function]}
    role="alert"
  >
    <span
      className="bpk-banner-alert__icon"
    >
      <span
        style={
          Object {
            "display": "inline-block",
            "lineHeight": "1.125rem",
            "marginTop": "0.1875rem",
            "verticalAlign": "top",
          }
        }
      >
        <svg
          className="bpk-banner-alert__success-icon"
          height="18"
          style={
            Object {
              "height": "1.125rem",
              "width": "1.125rem",
            }
          }
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 2C6.5 2 2 6.5 2 12s4.5 10 10 10 10-4.5 10-10S17.5 2 12 2zm5.9 7l-6.5 7.4c-.4.5-1.2.6-1.7.1l-3.5-3.1c-.3-.2-.3-.6-.1-.8l.8-.9c.2-.3.6-.3.8-.1l2.4 2.1c.1.1.3.1.3 0L16 7.4c.2-.2.6-.3.8-.1l.9.8c.3.3.4.6.2.9z"
          />
        </svg>
      </span>
    </span>
     
    <span
      className="bpk-banner-alert__message"
    >
      <p>
        All 
        <span>
          good
        </span>
      </p>
    </span>
     
    <span
      className="bpk-banner-alert__toggle"
    >
      <button
        aria-expanded={false}
        aria-label="View more"
        className="bpk-banner-alert__toggle-button"
        title="View more"
      >
        <span
          style={
            Object {
              "display": "inline-block",
              "lineHeight": "1.125rem",
              "marginTop": "0.1875rem",
              "verticalAlign": "top",
            }
          }
        >
          <svg
            className="bpk-banner-alert__expand-icon"
            height="18"
            style={
              Object {
                "height": "1.125rem",
                "width": "1.125rem",
              }
            }
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 17.5l-7.2-6.4c-.6-.5-.7-1.5-.1-2.1.5-.6 1.5-.7 2.1-.1l5.2 4.6 5.2-4.6c.6-.6 1.6-.5 2.1.1s.5 1.6-.1 2.1L12 17.5z"
            />
          </svg>
        </span>
      </button>
    </span>
  </header>
</section>
`;

exports[`BpkBannerAlert should render correctly with arbitrary props 1`] = `
<section
  className="bpk-banner-alert bpk-banner-alert--warn"
  hidden="hidden"
  id="custom-id"
>
  <header
    aria-live="assertive"
    className="bpk-banner-alert__header"
    onClick={[Function]}
    role="alert"
  >
    <span
      className="bpk-banner-alert__icon"
    >
      <span
        style={
          Object {
            "display": "inline-block",
            "lineHeight": "1.125rem",
            "marginTop": "0.1875rem",
            "verticalAlign": "top",
          }
        }
      >
        <svg
          className="bpk-banner-alert__warn-icon"
          height="18"
          style={
            Object {
              "height": "1.125rem",
              "width": "1.125rem",
            }
          }
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 2C6.5 2 2 6.5 2 12s4.5 10 10 10 10-4.5 10-10S17.5 2 12 2zm1.5 16.1c0 .5-.4.9-.9.9h-1.1c-.5 0-.9-.4-.9-.9V11c0-.5.4-.9.9-.9h1.1c.5 0 .9.4.9.9v7.1zm0-11.1c0 .5-.5 1-1 1h-1c-.5 0-1-.5-1-1V6c0-.5.5-1 1-1h1c.5 0 1 .5 1 1v1z"
          />
        </svg>
      </span>
    </span>
     
    <span
      className="bpk-banner-alert__message"
    >
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
    </span>
     
  </header>
</section>
`;

exports[`BpkBannerAlert should render correctly with child nodes 1`] = `
<section
  className="bpk-banner-alert bpk-banner-alert--success"
>
  <header
    aria-live="assertive"
    className="bpk-banner-alert__header bpk-banner-alert__header--expandable"
    onClick={[Function]}
    role="alert"
  >
    <span
      className="bpk-banner-alert__icon"
    >
      <span
        style={
          Object {
            "display": "inline-block",
            "lineHeight": "1.125rem",
            "marginTop": "0.1875rem",
            "verticalAlign": "top",
          }
        }
      >
        <svg
          className="bpk-banner-alert__success-icon"
          height="18"
          style={
            Object {
              "height": "1.125rem",
              "width": "1.125rem",
            }
          }
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 2C6.5 2 2 6.5 2 12s4.5 10 10 10 10-4.5 10-10S17.5 2 12 2zm5.9 7l-6.5 7.4c-.4.5-1.2.6-1.7.1l-3.5-3.1c-.3-.2-.3-.6-.1-.8l.8-.9c.2-.3.6-.3.8-.1l2.4 2.1c.1.1.3.1.3 0L16 7.4c.2-.2.6-.3.8-.1l.9.8c.3.3.4.6.2.9z"
          />
        </svg>
      </span>
    </span>
     
    <span
      className="bpk-banner-alert__message"
    >
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
    </span>
     
    <span
      className="bpk-banner-alert__toggle"
    >
      <button
        aria-expanded={false}
        aria-label="View more"
        className="bpk-banner-alert__toggle-button"
        title="View more"
      >
        <span
          style={
            Object {
              "display": "inline-block",
              "lineHeight": "1.125rem",
              "marginTop": "0.1875rem",
              "verticalAlign": "top",
            }
          }
        >
          <svg
            className="bpk-banner-alert__expand-icon"
            height="18"
            style={
              Object {
                "height": "1.125rem",
                "width": "1.125rem",
              }
            }
            viewBox="0 0 24 24"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 17.5l-7.2-6.4c-.6-.5-.7-1.5-.1-2.1.5-.6 1.5-.7 2.1-.1l5.2 4.6 5.2-4.6c.6-.6 1.6-.5 2.1.1s.5 1.6-.1 2.1L12 17.5z"
            />
          </svg>
        </span>
      </button>
    </span>
  </header>
</section>
`;
